--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,5 @@
 This file states changes as of version 0.2.4:
-$Id: CHANGELOG,v 1.56 2006/12/12 11:26:01 kattemat Exp $
+$Id: CHANGELOG,v 1.57 2006/12/13 23:06:23 bernd67 Exp $
 
 0.4.11 --------------------------------------------------------------------
 
@@ -74,6 +74,8 @@ BUGFIXES
 - Fixed return value check on times(2) calls in the scheduler
 - Fixed bug(s) that could cause crash when an interface was brought
   down while olsrd was running.
+- Removed the silent (read: unchecked) hard limit of 16 interfaces.
+- Compiles now cleanly on 64bit (e.g. x86_64).
 
 0.4.9 ---------------------------------------------------------------------
 
