--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,21 @@
 This file states changes as of version 0.2.4:
-$Id: CHANGELOG,v 1.57 2006/12/13 23:06:23 bernd67 Exp $
+$Id: CHANGELOG,v 1.58 2007/04/01 21:44:14 bernd67 Exp $
+
+0.5.0 ---------------------------------------------------------------------
+
+APPLIED PATCHES FROM FREIFUNK-FIRMWARE
+libsmake, dyngwplain, nameservices+services, tzxtinfo, quagga, quagga-routehandler,
+optimize, fixes from Eric Tromp and Sven-Ola Tuecke, CPU-optimize, secure key, HNA-IP
+
+CLEANUPS
+removed hardcoded limit on the number of interfaces (at least in the Unix part)
+made Makefile targets much more consistent
+
+BUGFIXES
+all over the place
+
+MISC
+put Bmf-1.3 plugin into it
 
 0.4.11 --------------------------------------------------------------------
 
