--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,13 @@
 This file states changes as of version 0.2.4:
-$Id: CHANGELOG,v 1.59 2007/04/03 08:25:19 bernd67 Exp $
+$Id: CHANGELOG,v 1.60 2007/06/30 20:16:11 bernd67 Exp $
+
+0.5.1 ---------------------------------------------------------------------
+
+Upgrade to olsr-bmf 1.5
+
+CLEANUPS
+* moved a only locally needed hack from "union olsr_ip_addr" into the only place
+  where it is needed in hashing.c
 
 0.5.0 ---------------------------------------------------------------------
 
