--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,9 +1,12 @@
 This file states changes as of version 0.2.4:
-$Id: CHANGELOG,v 1.60 2007/06/30 20:16:11 bernd67 Exp $
+$Id: CHANGELOG,v 1.61 2007/07/02 11:05:48 bernd67 Exp $
 
 0.5.1 ---------------------------------------------------------------------
 
+MISC
 Upgrade to olsr-bmf 1.5
+
+latitude/longitude support is now in the nameservice plugin
 
 CLEANUPS
 * moved a only locally needed hack from "union olsr_ip_addr" into the only place
