--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,12 +1,33 @@
 This file states changes as of version 0.2.4:
-$Id: CHANGELOG,v 1.61 2007/07/02 11:05:48 bernd67 Exp $
+$Id: CHANGELOG,v 1.62 2007/07/05 22:43:46 bernd67 Exp $
 
 0.5.1 ---------------------------------------------------------------------
 
 MISC
-Upgrade to olsr-bmf 1.5
+Upgrade to olsr-bmf 1.5 from Erik Tromp <erik_tromp@hotmail.com>
 
-latitude/longitude support is now in the nameservice plugin
+latitude/longitude support is now in the nameservice plugin done by
+Sven-Ola Tuecke <mail2news@commando.de>
+
+added the spf refactoring patch from  Hannes Gredler <hannes@gredler.at> whicht saves
+a noteworthy amount of CPU time. To quite him:
+----  snip  ----
+1. use of an AVL tree as a min-heap implementation
+
+   as a means for efficient sorting.
+   (the etx metric is used as the key in the candidate tree)
+
+2. next-hop propagation
+
+   rather than tracking the previous node in olsr_relax()
+   i have changed that model and pre-populate all one-hop neighbors
+   with their own IP adress as 'next-hop' and pull that
+   pointer up once new paths are explored.
+
+   as a result no walker for counting hops and extracting next-hops
+   is required - it turns out at this is slighly more efficient
+   than the existing behaviour (even with the cache applied).
+----  snip  ----
 
 CLEANUPS
 * moved a only locally needed hack from "union olsr_ip_addr" into the only place
