--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 
 +====================================================================+
-| README - olsr.org OLSR daemon 0.5.1, 06.07.2007                    |
+| README - olsr.org OLSR daemon 0.5.2, 17.07.2007                    |
 +====================================================================+
 
 Andreas Tonnesen(andreto@olsr.org)
@@ -117,6 +117,9 @@ it with custom actions.
 
   - HttpInfo. This plugin implements a simple HTTP server that serves dynamic
     pages with lots of information about the running olsrd process.
+
+  - TxtInfo. This delivers output similar to the above. However, it is intended
+    for external tools to use the output.
 
   - Mini.
 
@@ -444,4 +447,4 @@ limitations with respect to testing and maturity apply. Building and
 installing works in the same was as on FreeBSD.
 
 
-$Id: README,v 1.19 2007/07/09 07:27:57 kattemat Exp $
+$Id: README,v 1.20 2007/07/17 11:06:28 bernd67 Exp $
