--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,10 +1,16 @@
 This file states changes as of version 0.2.4:
-$Id: CHANGELOG,v 1.65 2007/07/17 09:52:01 bernd67 Exp $
+$Id: CHANGELOG,v 1.66 2007/07/23 13:04:01 bernd67 Exp $
+
+0.5.3 ---------------------------------------------------------------------
+
+URGENT BUG FIX
+Ignacio García Pérez <iggarpe@terra.es> found a serious bug in the dot-draw
+plugin and identified it's source.
 
 0.5.2 ---------------------------------------------------------------------
 
 URGENT BUG FIX
-Sven-Ole Tuecke found a serious bug of the class "show stopper" and sent a patch.
+Sven-Ola Tuecke found a serious bug of the class "show stopper" and sent a patch.
 
 PLUGIN CLEANUP
 Plugins handle parameters quite individually (case-sensitive vs case-insensitive,
