--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,5 @@
 This file states changes as of version 0.2.4:
-$Id: CHANGELOG,v 1.68 2007/07/31 12:02:18 bernd67 Exp $
+$Id: CHANGELOG,v 1.69 2007/08/02 12:19:57 bernd67 Exp $
 
 0.5.3 ---------------------------------------------------------------------
 
@@ -20,9 +20,14 @@ changes there also lead to new compilation.
 Remeber: We support "ccache" so install it to save lot of meaningkless recompiles
 if nothing (as seen by the real C compiler, i.e. the C preprocessor) has changed.
 
+BUILD FIX
+Linux/Alpha and Linux/HPPA need "-fPIC" also for the cfgparser library. This was
+fixed for Debian packages for 0.4.10 but apparetnly didn't make it into the CVS.
+
 CLEANUPS
 - olsr_switch does no longer generate warnings
 - olsr_switch is also built with "build_all" and cleaned with "uberclean"
+- More "const" all over the place.
 
 0.5.2 ---------------------------------------------------------------------
 
