--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 
 +====================================================================+
-| README - olsr.org OLSR daemon 0.5.2, 17.07.2007                    |
+| README - olsr.org OLSR daemon 0.5.3, 02.08.2007                    |
 +====================================================================+
 
 Andreas Tonnesen(andreto@olsr.org)
@@ -82,7 +82,7 @@ olsr.org.
  * PLUGINS
 ===========
 
-Olsrd supports dynamic loading of plugins(dynamically loaded libraries) for 
+Olsrd supports dynamic loading of plugins (dynamically loaded libraries) for 
 functions like generation and processing of private package types, setting
 olsrd configurations in run-time and much more. This design is chosen for
 amongst others, the following reasons:
@@ -113,7 +113,7 @@ it with custom actions.
 
   Plugins that are part of this release(can be found in the lib/ directory):
 
-  - Tiny Application Server(TAS).
+  - Tiny Application Server (TAS).
 
   - HttpInfo. This plugin implements a simple HTTP server that serves dynamic
     pages with lots of information about the running olsrd process.
@@ -153,12 +153,13 @@ hops. Have a look at the README-Link-Quality.html file for details.
 
 There is no synchronization concept (and thus - and for Gods sake -  no
 code). Some plugins use threads for concurrency so this should be solved.
+ATM the bmf plugin is the only one using threads.
 
 ===============
  * FUTURE WORK
 ===============
 
-Future work concentrates on reduction of ressource (ab)use nad to make
+Future work concentrates on reduction of ressource (ab)use and to make
 it more scalable. Of course additional useful plugins are always
 appreciated.
 
@@ -183,6 +184,17 @@ known to run on various hardware like:
 A binary tarball featuring x86, MIPSEL and ARM binaries is available
 for download at olsr.org
 
+Ports exist for all major operating systems:
+- Linux
+- NetBSD/OpenBSD/FreeBSD: ATM the main development occurs on Linux with
+         GNU tools so occasionally it needs some minor tweaks to compile
+         it on *BSD. Please send patches if you fix problems there.
+- Win32: You need (the relevant parts of) cygwin to compile the daemon
+         as such. The installer and GUI needs VisualC++ though.
+
+Packages for the operating systems and various distributions are available
+at olsr.org. Feel free to package it and announce it on the mailing lists.
+
 ===========
  * PLUGINS
 ===========
@@ -194,6 +206,7 @@ Building the plugins are just a matter of executing:
 make
 while installing requires(as root):
 make install
+in the plugins top directory (i.e. "lib/$plugin/").
 To use the plugins add them to the olsrd configuration file.
 
 =====================
@@ -447,4 +460,4 @@ limitations with respect to testing and maturity apply. Building and
 installing works in the same was as on FreeBSD.
 
 
-$Id: README,v 1.20 2007/07/17 11:06:28 bernd67 Exp $
+$Id: README,v 1.21 2007/08/02 20:02:56 bernd67 Exp $
