--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,5 @@
 This file states changes as of version 0.2.4:
-$Id: CHANGELOG,v 1.77 2007/08/28 20:45:17 bernd67 Exp $
+$Id: CHANGELOG,v 1.78 2007/08/29 21:46:25 bernd67 Exp $
 
 0.5.4 ---------------------------------------------------------------------
 
@@ -35,19 +35,28 @@ olsr_makefile_make_use_of_exename.patch
 - This patch makes sure that the EXENAME variable of Makefile.inc is used
   in Makefile.
 
-PATCH by Bernd Petrovitsch <bernd@firmix.at>
+PATCHES and CLEANUPS by Bernd Petrovitsch <bernd@firmix.at>
 - Made a function from the ME_TO_DOUBLE() macro (in src/mantissa.h).
   This saves code throughout the code even on i386 and will even more
   on architectures without floating point units and "-msoft-float".
 - And the mathemathics in src/mantissa.h is reformulated to minimize
   floating point operations to save CPU power - especially on embedded
   devices.
-
-CLEANUPS
 - paving the way to activate -Wshadow, much more to do
 - const-ify parameters here and there
 - use NULL for pointers (and not "0")
 - Killed "extern" declarations in (not generated) .c files
+
+- Based on a patch by Gianni Costanzi <gianni.costanzi@gmail.com> (so credits
+  and thanks have to go there):
+  added OS_CFLAG_PTHREAD Makefile variable since gcc (on Linux) requests this
+  in the manual page.
+  Changes/additions:
+  - I added definitions to all OS-specific Makefile.$OS with the value similar
+    to the value in OS_LIB_PTHREAD (either empty or "-pthread").
+  - The variable is added to CPPFLAGS (and not CFLAGS) since CPPFLAGS is used
+    for all cpp and gcc calls (and gcc's man page indicates that it sets
+    variables for both of them).
 
 0.5.3 ---------------------------------------------------------------------
 
