--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,5 @@
 This file states changes as of version 0.2.4:
-$Id: CHANGELOG,v 1.81 2007/09/07 08:53:48 bernd67 Exp $
+$Id: CHANGELOG,v 1.82 2007/09/07 09:07:25 bernd67 Exp $
 
 0.5.4 ---------------------------------------------------------------------
 
@@ -125,8 +125,9 @@ PATCHES and CLEANUPS by Bernd Petrovitsch <bernd@firmix.at>
   number of (free()s). And it also kills some code and copying around of
   data.
 
-PATCH by John Hay <jhay@meraka.org.za>
+PATCHES by John Hay <jhay@meraka.org.za>
 - update to new FreeBSD WLAN API
+- do not require /bin/bash, use /bin/sh
 
 - paving the way to activate -Wshadow, much more to do
 - const-ify parameters here and there
