--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,5 @@
 This file states changes as of version 0.2.4:
-$Id: CHANGELOG,v 1.91 2007/09/17 22:24:22 bernd67 Exp $
+$Id: CHANGELOG,v 1.92 2007/09/17 22:27:24 bernd67 Exp $
 
 0.5.4 ---------------------------------------------------------------------
 
@@ -132,7 +132,7 @@ http://download-master.berlin.freifunk.net/sven-ola/nylon/packages/olsrd/files/
   113-olsrd-txtinfo-fixhttpget.patch, 114-olsrd-timeoutlimit.patch,
   115-olsrd-nameserviceparamfix.patch and
   116-olsrd-fix-pluginparam-addons.patch fixing the compilation warning
-  on 64bit.
+  on 64bit and lots of other improvements.
 
 PATCH by Arnd Hannemann <hannemann@i4.informatik.rwth-aachen.de>
 olsr_makefile_make_use_of_exename.patch
