--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,5 @@
 This file states changes as of version 0.2.4:
-$Id: CHANGELOG,v 1.97 2007/10/14 14:11:11 bernd67 Exp $
+$Id: CHANGELOG,v 1.98 2007/10/16 09:54:43 bernd67 Exp $
 
 0.5.4 ---------------------------------------------------------------------
 
@@ -73,6 +73,11 @@ non RT related stuff:
   improves the raw-SPF runtime.
 
 - add display of SPF runtime (masked behind #ifdef SPF_PROFILING)
+
+- http://gredler.at/download/olsrd/neighbor_routes3.diff: This updates the own
+  IP address (read: the main address) after changes (e.g. on
+  `ifup wlan0; sleep 1; ifdown wlan0`) and kills the
+  olsr_fill_routing_table_with_neighbors() function.
 ----  snip  ----
 And Sven-Ola Tuecke <mail2news@commando.de> fixed an instability issue on interface
 up/down operations (see 102-olsrd-rt-refactoring-fixes.patch below).
